# RLDOCK-Score-V2

./: .gitignore  CMakeLists.txt  README.md
src/: config.cmake.template  config.h
test/2CKY-A-1084-TPP/: test.py
test/2CKY-A-1084-TPP/data/: 2CKY_A-1084-TPP_binding_mode_score.txt  2CKY_A-1084-TPP_virtual_screen_score.txt
